--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "licenses": [
     "ISC"
   ],
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "frontend api services",
   "author": "Jonathan Dahan <jonathan@jonathan.is>",
   "keywords": [
@@ -17,35 +17,35 @@
     "museum"
   ],
   "dependencies": {
-    "cheerio": "^0.16.0",
-    "koa": "^0.6.3",
+    "cheerio": "^0.19.0",
+    "koa": "^1.1.0",
     "koa-better-ratelimit": "^2.1.2",
-    "koa-compress": "^1.0.7",
-    "koa-cors": "0.0.13",
-    "koa-etag": "^1.2.4",
+    "koa-compress": "^1.0.8",
+    "koa-cors": "0.0.16",
+    "koa-etag": "^2.0.0",
     "koa-fresh": "0.0.3",
-    "koa-json-mask": "^0.1.0",
-    "koa-logger": "^1.2.1",
-    "koa-markdown": "0.0.3",
-    "koa-redis-cache": "0.0.7",
+    "koa-json-mask": "^0.3.2",
+    "koa-logger": "^1.3.0",
+    "koa-markdown": "^2.0.1",
+    "koa-redis-cache": "^0.5.0",
     "koa-response-time": "^1.0.2",
-    "koa-router": "^3.1.4",
-    "koa-static": "^1.4.5",
-    "q": "^1.0.1",
-    "ramda": "^0.1.3",
+    "koa-router": "^5.2.3",
+    "koa-static": "^1.5.1",
+    "q": "^1.4.1",
+    "ramda": "^0.18.0",
     "random-ua": "0.0.6",
     "request": "^2.65.0",
     "simple-rate-limiter": "^0.2.3",
-    "thunkify": "^2.1.1",
+    "thunkify": "^2.1.2",
     "traverse": "^0.6.6",
-    "xml2js": "^0.4.2"
+    "xml2js": "^0.4.13"
   },
   "engines": {
-    "node": "^4.2.1",
-    "npm": "^2.14.8"
+    "node": "^5.0.0",
+    "npm": "^3.3.6"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node --use-strict server.js",
     "test": "standard"
   },
   "repository": {
